Update gradle setup